--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,18 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.focusable {
+  display: inline-block;
+  width: 15%;
+  height: 100px;
+}
+
+.focusable {
+  background: #C4AEAD;
+  margin: 10px;
+}
+
+.focused {
+  background:#CCCCFF;
+}
